# artisan-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_artisan.py
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
artisan_engine/: adapter.py  config.py  models.py  schemas.py
examples/: 01_simple_sentiment_analysis.py  02_openai_compatible_usage.py
tests/: test_api.py  test_basic.py
